--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,12 @@
 [submodule "sketches/model4917-mfgtest"]
 	path = sketches/model4917-mfgtest
 	url = git@gitlab-x.mcci.com:dhineshkumar/model4917-mfgtest.git
+[submodule "libraries/Catena-mcciadk"]
+	path = libraries/Catena-mcciadk
+	url = git@github.com:mcci-catena/Catena-mcciadk.git
+[submodule "libraries/arduino-lorawan"]
+	path = libraries/arduino-lorawan
+	url = git@github.com:mcci-catena/arduino-lorawan.git
+[submodule "libraries/MCCI_FRAM_I2C"]
+	path = libraries/MCCI_FRAM_I2C
+	url = git@github.com:mcci-catena/MCCI_FRAM_I2C.git
